--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -4,15 +4,26 @@
 .home {
   display: flex;
   justify-content: center;
-  align-items: left;
   flex-direction: column;
   gap: 1rem;
-  padding: 3.5rem;
+  padding: 1.5rem;
 
   &__title {
     font-size: 2rem;
-    padding-bottom: 5rem;
+    margin-bottom: 3rem;
   }
 }
 
+.home__dailyquiz {
 
+}
+
+.home__subtitle {
+  text-align: center;
+  color: white;
+  background-color: vars.$main-primary-color;
+  font-size: 1.5rem;
+  padding: 0.5rem;
+  margin: 0 5rem;
+  border-radius: 1rem;
+}
