--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,4 +1,4 @@
-$main-primary-color: rgb(13, 114, 218);
+$main-primary-color: #0d72da;
 $primary-dark-color: #003051;
 $primary-light-color: #3f7caf;
 
