--- a/src/components/Header/styles copy.scss
+++ b/src/components/Header/styles copy.scss
@@ -11,19 +11,21 @@
   width: 100vw;
   height: 4rem;
   position: fixed;
+  top: 0;
   z-index: 100;
-  padding: 0.5rem 1rem;
 
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-
-
+/*==================== LOGO ========================*/
+  &__logo{
+  height: 5rem;
+  z-index: 100;
+  position: fixed;
+  left: 10px;
+  }
 
 /*==================== NAVBAR ========================*/
   &__nav{
-
+    position: fixed;
+    width: 100%;
     height: 4rem;
 
     //NAVBAR liste des élements de navigation <li>
@@ -42,18 +44,15 @@
       
       //NAVBAR élements de navigation <li>
       &__items {
-        display: none;
-/*         font-size: 1.25rem;
+        font-size: 1.25rem;
         text-transform: uppercase;
         width: 100%;
         border-top: 1px solid rgba(255, 255, 255, 0.555);
         text-align: center;
         margin-right: 0px;
         padding: 20px 0;
-        transition: 0.5s;    */     
-       
+        transition: 0.5s;         
         @include mixin.breakpoint(desktop) {
-          display: block;
           width: auto;
           padding: 10px;  
           margin-right: 1.25rem;
@@ -83,7 +82,7 @@
       &__items-link:hover{
         text-decoration: underline;
       }
-    
+
       
 
 
@@ -109,11 +108,11 @@
 
    /*==================== BOUTON LOGIN ========================*/
   &__login-button {
-  /*   display: block;
+    display: block;
     position: absolute;
     z-index: 100;
     top: 0.6rem;
-    right: 80px; */
+    right: 80px;
     outline: none;	
     border: none;
     background-color: #003051;
