--- a/src/components/Card/styles.scss
+++ b/src/components/Card/styles.scss
@@ -10,7 +10,7 @@
   overflow: hidden;
   background-color: white;
   width: 300px;
-  height: 440px;  
+  height: 440px;
   margin: 1rem auto;
   border-radius: 1rem;
   box-shadow: 0 0.1rem 1rem rgba(0, 0, 0, 0.3);
@@ -19,6 +19,7 @@
   &:hover {
     transform: scale(1.01);
     box-shadow: 0px 10px 20px 2px vars.$main-primary-color;
+    overflow: hidden;
   }
 }
 
@@ -31,7 +32,7 @@
 
 .card-body {
   padding: 0 0.5rem;
-  height:220px;
+  height: 220px;
 
   &__title {
     text-align: center;
@@ -56,7 +57,7 @@
     color: white;
     border-radius: 1rem;
     padding: 0.5rem;
-      text-transform: capitalize;
+    text-transform: capitalize;
   }
 
   &__difficulty {
@@ -94,8 +95,3 @@
     background-color: rgba(255, 0, 0, 0.1);
   }
 }
-
-
-
-
-
