--- a/src/components/CardHistory/styles.scss
+++ b/src/components/CardHistory/styles.scss
@@ -5,10 +5,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: white;
   margin: 1rem;
   padding: 1rem;
   border: 1px solid black;
   border-radius: 1rem;
+  gap: 2rem;
 
   &__img {
     width: 50px;
