--- a/src/components/Layout/styles.scss
+++ b/src/components/Layout/styles.scss
@@ -6,5 +6,14 @@
   flex-direction: column;
 }
 .app__content {
-  padding-top: 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 80.9vh;
+  padding-top: 3.3rem;
+  background: linear-gradient(
+      rgba(255, 255, 255, 0.95),
+      rgba(255, 255, 255, 0.95)
+    ),
+    url('../../assets/img/bg_quiz.jpg');
 }
