--- a/src/pages/Login/styles.scss
+++ b/src/pages/Login/styles.scss
@@ -2,14 +2,10 @@
 @use '../../styles/vars';
 
 .login-page {
-  padding: 7%;
-  margin: 2rem auto 2rem auto;
-
   &__wrapper {
     max-width: 22.5rem;
     margin: 0 auto;
     padding: 2.5rem;
-    text-align: center;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
     border-radius: 12px;
   }
@@ -32,19 +28,24 @@
     color: #fff;
     font-size: 1rem;
     cursor: pointer;
-    
   }
 }
 
 .form {
   max-width: 22.5rem;
   margin: 0 auto 4rem;
-  text-align: center;
 
   &__logo {
-    padding: 2rem;
-    font-size: 2rem;
-    color: vars.$main-primary-color;
+    width: 250px;
+    height: auto;
+    margin: 1.5rem 0;
+  }
+
+  &__label {
+    display: block;
+    text-align: left;
+    padding-bottom: 0.5rem;
+    margin-left: 0.5rem;
   }
 
   &__input {
