--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -5,21 +5,31 @@
 /*==================== HEADER ========================*/
 
 .header {
-  background-color: vars.$main-primary-color;
-  color: #fff;
+  background-color: #fff;
+  color: vars.$main-primary-color;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
   width: 100vw;
   height: 4rem;
   position: fixed;
   z-index: 100;
-  padding: 0.5rem 1rem;
+/*   padding: 0.5rem 1rem; */
+/* display: flex;
+flex-direction: row;
+align-items: center;
+justify-content: space-between; */
+display: block;
 
+
+&__container{
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-
-
+  padding: 0px 2rem;
+  @include mixin.breakpoint(desktop) {
+    padding: 0px 5rem; 
+  }
+}
 
 /*==================== NAVBAR ========================*/
   &__nav{
@@ -107,51 +117,12 @@
     }   
   }
 
-   /*==================== BOUTON LOGIN ========================*/
-  &__login-button {
-  /*   display: block;
-    position: absolute;
-    z-index: 100;
-    top: 0.6rem;
-    right: 80px; */
-    outline: none;	
-    border: none;
-    background-color: #003051;
-    border-radius: 1rem;
-    padding: 12px 10px;
-    font-family: 'Poppins', sans-serif;
-    font-size: 1rem;
-    text-transform: uppercase;
-    font-weight: 500;
-    transition: 0.5s;
-    cursor: pointer;
-    color: #fff;
-
-    &-icon{
-      display: flex;
-      flex-direction: row;
-      align-items: center;  
-    }
-    
-    &-pseudo{
-      display: none;
-      @include mixin.breakpoint(desktop) {
-        display: block;
-        margin-left: 5px;
-        text-transform:none;
-      }
-    }
-  
-  }
-  &__login-button:hover {
-    background-color: #fc9100;
-    transition: 0.5s;
-  }
+   
 
    /*==================== HEADER LINK ========================*/
-  a{
+/*   a{
     color:#fff;
-  }
+  } */
 }
 
 
