--- a/src/components/Header/Logo/styles.scss
+++ b/src/components/Header/Logo/styles.scss
@@ -1,5 +1,5 @@
-@use '../../styles/mixin';
-@use '../../styles/vars';
+@use '../../../styles/mixin';
+@use '../../../styles/vars';
 
 
 .header__logo{
@@ -13,6 +13,4 @@
   &-text{
     font-size: 1.2rem;
   }
-
-
 }
