--- a/src/components/Header/styles copy.scss
+++ b/src/components/Header/styles copy.scss
@@ -9,7 +9,7 @@
   color: #fff;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
   width: 100vw;
-  height: 4rem;
+  height: vars.$headerHeight;
   position: fixed;
   top: 0;
   z-index: 100;
@@ -26,7 +26,7 @@
   &__nav{
     position: fixed;
     width: 100%;
-    height: 4rem;
+    height: vars.$headerHeight;
 
     //NAVBAR liste des élements de navigation <li>
     &-list {
@@ -63,7 +63,7 @@
 
       // 1er élément <li>
       &__items:nth-child(1){
-        margin-top: 4rem;
+        margin-top: vars.$headerHeight;
         @include mixin.breakpoint(desktop) {
           margin-top: 0; 
         }
