--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,3 +1,4 @@
+// COULEURS
 $main-primary-color: #0d72da;
 $primary-dark-color: #003051;
 $primary-light-color: #3f7caf;
@@ -11,5 +12,7 @@ $main-third-color: #dd5751;
 $valid-answer-color: #3ea951;
 $wrong-answer-color: #eb3c33;
 
-
 $darkcolor: #213547;
+
+// TAILLES
+$headerHeight: 4rem;
