--- a/src/pages/Profil/styles.scss
+++ b/src/pages/Profil/styles.scss
@@ -68,6 +68,10 @@
   }
 
   &__quiz {
+    background-color: vars.$main-primary-color;
+    color: white;
+    padding: 0.25rem;
+    border-radius: 0.5rem;
     font-size: 1.2rem;
     border: none;
     cursor: pointer;
@@ -80,12 +84,15 @@
 }
 
 .profil__quiz--disconnect {
+  background-color: vars.$main-primary-color;
+  color: white;
+  border-radius: 0.5rem;
+  padding: 0.25rem;
   font-size: 1.2rem;
   border: none;
   cursor: pointer;
   text-align: center;
   transition: 0.5s;
-  background: none;
 }
 
 .profil__quiz--disconnect:hover {
