--- a/src/pages/QuizCreate/styles.scss
+++ b/src/pages/QuizCreate/styles.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  background-color: white;
 }
 
 .quiz__parameter {
@@ -65,7 +66,6 @@
   margin-top: 2rem;
 }
 
-
 .error-message {
   padding: 0.5rem;
   margin: 0.5rem 0;
@@ -73,5 +73,3 @@
   background: rgba(203, 24, 24, 0.757);
   border-radius: 5px;
 }
-
-
