Test add logo to header

--- a/src/components/Layout/styles.scss
+++ b/src/components/Layout/styles.scss
@@ -1,3 +1,4 @@
+@use '../../styles/mixin';
 @use '../../styles/vars';
 
 .app__container {
@@ -10,10 +11,16 @@
   justify-content: center;
   align-items: center;
   min-height: 80.9vh;
-  padding-top: 3.3rem;
+/*   padding-top: 3.3rem; */
+  padding: 4rem 2rem 0 2rem;
   background: linear-gradient(
       rgba(255, 255, 255, 0.95),
       rgba(255, 255, 255, 0.95)
     ),
     url('../../assets/img/bg_quiz.jpg');
+
+  @include mixin.breakpoint(desktop) {
+  padding: 4rem 2rem 0 2rem;
+  }
+
 }
