--- a/src/components/Header/Logo/styles.scss
+++ b/src/components/Header/Logo/styles.scss
@@ -7,7 +7,10 @@
   align-items: center;
   gap: 0.5rem;
   &-img{
-    font-size: 1.8rem;
+    width: 100px;
+
+    max-height: vars.$headerHeight;
+/*     margin: 1.5rem 0; */
   }
   &-text{
     font-size: 1.2rem;
