--- a/src/pages/Login/styles.scss
+++ b/src/pages/Login/styles.scss
@@ -35,7 +35,7 @@
   max-width: 22.5rem;
   margin: 0 auto 4rem;
 
-  &__logo {
+  &__logo-img {
     width: 250px;
     height: auto;
     margin: 1.5rem 0;
