--- a/src/pages/QuizList/styles.scss
+++ b/src/pages/QuizList/styles.scss
@@ -31,7 +31,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 1rem 0;
+    padding-top: 1rem;
     text-align: center;
   }
   &__filter {
