--- a/src/pages/Login/styles.scss
+++ b/src/pages/Login/styles.scss
@@ -1,11 +1,14 @@
 @use '../../styles/mixin';
 @use '../../styles/vars';
 
+//TODO: refaire les classes css login et register (conflit de nom)
+
 .login-page {
+  padding: 4rem 0;
   &__wrapper {
-    max-width: 22.5rem;
+    max-width: 25rem;
     margin: 0 auto;
-    padding: 2.5rem;
+    padding: 1rem 2.5rem;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
     border-radius: 12px;
   }
@@ -33,7 +36,7 @@
 
 .form {
   max-width: 22.5rem;
-  margin: 0 auto 4rem;
+  margin: 0 auto 0;
 
   &__logo-img {
     width: 250px;
@@ -48,18 +51,21 @@
     margin-left: 0.5rem;
   }
 
+  &__label {
+    margin-top: 15px;
+  }
+
   &__input {
     outline: 0;
     background: #f2f2f2;
     width: 100%;
     border: 0;
-    margin: 0 0 15px;
     padding: 15px;
     font-size: 0.9rem;
     border-radius: 0.7rem;
   }
 
-  &__button {
+  &-login__button {
     text-transform: uppercase;
     outline: 0;
     border: 0;
@@ -71,6 +77,7 @@
     font-size: 1rem;
     cursor: pointer;
     transition: 0.5s;
+    margin-top: 2.5rem;
 
     &:hover {
       background: vars.$main-secondary-color;
