--- a/src/pages/Profil-Settings/styles.scss
+++ b/src/pages/Profil-Settings/styles.scss
@@ -20,12 +20,15 @@
   margin: 0 auto 4rem;
   text-align: center;
 
+  &__label {
+    margin-top: 15px;
+  }
+
   &__input {
     outline: 0;
     background: #f2f2f2;
     width: 100%;
     border: 0;
-    margin: 0 0 15px;
     padding: 15px;
     font-size: 0.9rem;
     border-radius: 0.7rem;
