--- a/src/components/Layout/styles.scss
+++ b/src/components/Layout/styles.scss
@@ -1,22 +1,31 @@
 @use '../../styles/mixin';
 @use '../../styles/vars';
+//TODO recalculer la min height app content
 
 .app__container {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+
+  
+
 }
 .app__content {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  min-height: 80.9vh;
-  padding-top: vars.$headerHeight;
+  justify-content: space-between;
+  flex-grow: 1;
   background: linear-gradient(
-      rgba(255, 255, 255, 0.95),
-      rgba(255, 255, 255, 0.95)
-    ),
-    url('../../assets/img/bg_quiz.jpg');
+    rgba(255, 255, 255, 0.95),
+    rgba(255, 255, 255, 0.95)
+  ),
+  url('../../assets/img/bg_quiz.jpg');
+
+/*   min-height: 80.9vh; */
+margin-top: 4rem;
+/*   padding-top: vars.$headerHeight; */
+
 
   @include mixin.breakpoint(desktop) {
 
