--- a/src/pages/Login/styles.scss
+++ b/src/pages/Login/styles.scss
@@ -4,13 +4,16 @@
 //TODO: refaire les classes css login et register (conflit de nom)
 
 .login-page {
-  padding: 4rem 0;
-  &__wrapper {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+  &__wrapper {   
     max-width: 25rem;
-    margin: 0 auto;
+    margin: vars.$headerHeight auto;
     padding: 1rem 2.5rem;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
     border-radius: 12px;
+    background-color: #fff;
   }
 
   &__isLogged {
@@ -36,7 +39,7 @@
 
 .form {
   max-width: 22.5rem;
-  margin: 0 auto 0;
+
 
   &__logo-img {
     width: 250px;
@@ -49,9 +52,6 @@
     text-align: left;
     padding-bottom: 0.5rem;
     margin-left: 0.5rem;
-  }
-
-  &__label {
     margin-top: 15px;
   }
 
