--- a/src/pages/Register/styles.scss
+++ b/src/pages/Register/styles.scss
@@ -2,16 +2,17 @@
 @use '../../styles/vars';
 
 .register-page {
-  padding: 0.1%;
-  background-color: white;
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
 
   &__wrapper {
-    max-width: 22.5rem;
-    margin: 0 auto;
-    padding: 0.5rem 2.5rem;
-    text-align: center;
+    max-width: 25rem;
+    margin: vars.$headerHeight auto;
+    padding: 1rem 2.5rem;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.25);
     border-radius: 12px;
+    background-color: #fff;
   }
 
   &__isLogged {
@@ -37,8 +38,6 @@
 
 .form {
   max-width: 22.5rem;
-  margin: 0 auto 4rem;
-  text-align: center;
 
   &__label {
     margin-top: 15px;
@@ -65,6 +64,7 @@
     color: #fff;
     font-size: 1rem;
     cursor: pointer;
+    margin-top: 2.5rem;
 
     &:hover {
       background: vars.$main-secondary-color;
