Create Quiz - add handle form errors to questions and answers text fields

--- a/src/pages/QuizCreate/QuestionCreate/styles.scss
+++ b/src/pages/QuizCreate/QuestionCreate/styles.scss
@@ -4,3 +4,10 @@
 .question__number {
     margin-bottom: 1rem;
 }
+.answer_container {
+    width: 100%;
+}
+.answer_input-text {
+    width: 100%;
+flex-grow: 1;
+}
