--- a/src/pages/QuizUpdate/styles.scss
+++ b/src/pages/QuizUpdate/styles.scss
@@ -1,7 +1,7 @@
 @use '../../styles/mixin';
 @use '../../styles/vars';
 
-.quiz__creation {
+.quiz__update {
   display: flex;
   justify-content: center;
   align-items: center;
