--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -36,6 +36,7 @@ button {
   color: white;
   background: rgba(203, 24, 24, 0.757);
   border-radius: 5px;
+  width: 80%;
 }
 // ERREURS
 // erreur sur un input de fomulaire
