QuizUpdate: add state for success message + change state name to alert error

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -58,3 +58,12 @@ button {
   text-align: left;
   vertical-align: middle;
 }
+
+.success-message {
+  padding: 0.5rem;
+  margin: 0.5rem 0;
+  color: white;
+  background: rgba(62, 169, 81, 0.757);
+  border-radius: 5px;
+  width: 80%;
+}
