--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,7 +1,7 @@
 // COULEURS
 $main-primary-color: #0d72da;
 $primary-dark-color: #003051;
-$primary-light-color: #3f7caf;
+$primary-light-color: #8dbff1;
 
 $main-secondary-color: #fc9100;
 $secondary-light-color: #ffb116;
