--- a/src/pages/QuizCreate/styles.scss
+++ b/src/pages/QuizCreate/styles.scss
@@ -7,7 +7,7 @@
   align-items: center;
   flex-direction: column;
   background-color: white;
-  padding-top: vars.$headerHeight; 
+  padding: 1.5rem;
 }
 
 .quiz__parameter {
@@ -24,12 +24,6 @@
 }
 
 
-.quiz__selector {
-  margin-bottom: 1rem;
-  margin-top: 1rem;
-  height: 2rem;
-  font-family: 'Poppins', sans-serif;
-}
 
 .quiz__header {
   font-size: 1.5rem;
@@ -57,23 +51,29 @@
   cursor: pointer;
 }
 
-.answer_container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0.5rem;
-}
+// .quiz__selector {
+//   margin-bottom: 1rem;
+//   margin-top: 1rem;
+//   height: 2rem;
+//   font-family: 'Poppins', sans-serif;
+// }
+// .answer_container {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   padding: 0.5rem;
+// }
 
-.answer_radio-button {
-  margin-right: 0.5rem;
-}
+// .answer_radio-button {
+//   margin-right: 0.5rem;
+// }
 
-.question__title {
-  padding-bottom: 1rem;
-  padding-top: 0.5rem;
-}
+// .question__title {
+//   padding-bottom: 1rem;
+//   padding-top: 0.5rem;
+// }
 
-.question__number {
-  margin-top: 2rem;
-}
+// .question__number {
+//   margin-top: 2rem;
+// }
 
