--- a/src/pages/QuizUpdate/QuestionUpdate/styles.scss
+++ b/src/pages/QuizUpdate/QuestionUpdate/styles.scss
@@ -1,6 +1,20 @@
 @use '../../../styles/mixin';
 @use '../../../styles/vars';
 
-.question__number {
+.question-update__container{
+    background-color: #fff;
+    border-radius: 5%;
+    margin: 2rem 0;
+    padding: 1rem; 
+}
+.question-update__number {
     margin-bottom: 1rem;
+    color: vars.$main-secondary-color;
+    text-align: center;
+    padding: 1rem 0;
+    font-family: 'Bangers', cursive;
+    font-size: 2.5rem;  
+    @include mixin.breakpoint(desktop) {
+        font-size: 3rem; 
+      }  
 }
