--- a/src/pages/QuizCreate/AnswerCreate/styles.scss
+++ b/src/pages/QuizCreate/AnswerCreate/styles.scss
@@ -1,13 +1,15 @@
 @use '../../../styles/mixin';
 @use '../../../styles/vars';
 
-.question__number {
-    margin-bottom: 1rem;
+.answer-create__question-choice {
+    margin: 1rem 0;
 }
-.answer_container {
+.answer-create__container {
     width: 100%;
+    display: flex;
+    flex-direction: row;    
 }
-.answer_input-text {
+.answer-create__input-text {
     width: 100%;
-flex-grow: 1;
+    flex-grow: 1;
 }
