--- a/src/pages/QuizCreate/QuestionCreate/styles.scss
+++ b/src/pages/QuizCreate/QuestionCreate/styles.scss
@@ -1,13 +1,21 @@
 @use '../../../styles/mixin';
 @use '../../../styles/vars';
 
-.question__number {
+.question-create__container{
+    background-color: #fff;
+    border-radius: 5%;
+    margin: 2rem 0;
+    padding: 1rem; 
+}
+
+.question-create__number {
     margin-bottom: 1rem;
-}
-.answer_container {
-    width: 100%;
-}
-.answer_input-text {
-    width: 100%;
-flex-grow: 1;
+    color: vars.$main-primary-color;
+    text-align: center;
+    padding: 1rem 0;
+    font-family: 'Bangers', cursive;
+    font-size: 2.5rem;  
+    @include mixin.breakpoint(desktop) {
+        font-size: 3rem; 
+      }  
 }
