--- a/src/pages/QuizCreate/styles.scss
+++ b/src/pages/QuizCreate/styles.scss
@@ -1,55 +1,109 @@
 @use '../../styles/mixin';
 @use '../../styles/vars';
 
-.quiz__creation {
+.quiz-create {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
-  background-color: white;
+  flex-direction: column;  
   padding: 1.5rem;
+  background-image: linear-gradient(to bottom, rgba(245, 249, 255, 0.6), rgba(132, 174, 236,0.6), rgba(132, 174, 236,0.6), rgba(132, 174, 236,0.6), rgba(82, 143, 228,0.6), rgba(82, 143, 228,0.6), rgba(69, 139, 226,0.6), rgba(54, 134, 225,0.6), rgba(76, 148, 230,0.6), rgba(98, 163, 234,0.6), rgba(120, 177, 238,0.6), rgba(141, 191, 241, 0.8));
+  
+  &__header {
+    font-size: 1.5rem;
+    width: 100%;
+    padding: 1rem;
+    &-title{
+      font-family: 'Poppins', cursive;
+      font-size: 1.5rem;
+      flex-grow: 1;
+      text-align: center;
+      padding: 4rem 0 1.5rem 0;      
+      @include mixin.breakpoint(desktop) {
+        font-size: 2rem;
+        margin-top: 1rem;
+        padding: 1.5rem 0;
+       }
+    }
+  }
+  &__header p {
+    font-size: 1rem;
+    text-align: center;
+    color: vars.$primary-dark-color;
+  }
+  &__parameter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1.5rem;
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 5%;
+    margin-bottom: 1rem;
+    padding: 1rem;
+    width: 100%;  
+  }
+  &__btn-exit{
+    font-family: 'Poppins', sans-serif;
+    outline: 0;
+    border: 0;
+    padding: 0.5rem;  
+    background: vars.$main-primary-color;
+    border-radius: 0.5rem;
+    color: #fff;
+    font-size: 0.9rem;
+    position: absolute;
+    top: 5.5rem;
+    left: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    cursor: pointer;
+    &:hover {
+      background-color: hsl(210, 89%, 35%);
+    }
+    @include mixin.breakpoint(desktop) {
+      top: 8rem;
+      left: 4rem;
+     }
+  }
+  &__form{
+    width: 100%;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    @include mixin.breakpoint(desktop) {
+      width: 70%;
+      max-width: 800px;
+    }
+    @include mixin.breakpoint(desktopXL) {
+      width: 55%;
+      max-width: 800px;
+    }
+  }
+  &__btn-submit {
+    font-family: 'Poppins', sans-serif;
+    outline: 0;
+    border: 0;
+    padding: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    background: vars.$main-secondary-color;
+    border-radius: 0.5rem;
+    color: #fff;
+    font-size: 1rem;
+    cursor: pointer;
+    &:hover {
+      background: vars.$secondary-light-color;
+    }
+  }
 }
 
-.quiz__parameter {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  margin-bottom: 1rem;
-  gap: 1.5rem;
-
-
-}
-.quiz__questions{
-}
 
 
 
-.quiz__header {
-  font-size: 1.5rem;
-  display: flex;
-  align-items: center;
-  white-space: nowrap;
-  width: 100%;
-  margin-bottom: 1rem;
-}
-.quiz__header p {
-  font-size: 1rem;
-}
-.quiz__button {
-  font-family: 'Poppins', sans-serif;
-  outline: 0;
-  border: 0;
-  padding: 0.5rem;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  background: vars.$main-primary-color;
-  border-radius: 0.5rem;
-  width: 100%;
-  color: #fff;
-  font-size: 1rem;
-  cursor: pointer;
-}
 
 // .quiz__selector {
 //   margin-bottom: 1rem;
