--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -10,6 +10,7 @@ $secondary-light2-color: #ffebc4;
 $main-third-color: #dd5751;
 
 $valid-answer-color: #3ea951;
+$valid-answer-color2: #94b299;
 $wrong-answer-color: #eb3c33;
 
 $darkcolor: #213547;
