--- a/src/pages/QuizUpdate/styles.scss
+++ b/src/pages/QuizUpdate/styles.scss
@@ -35,6 +35,11 @@
        }
     }
   }
+  &__header p {
+    font-size: 1rem;
+    text-align: center;
+    color: vars.$primary-dark-color;
+  }
   &__btn-exit{
     font-family: 'Poppins', sans-serif;
     outline: 0;
