--- a/src/pages/ProfilQuiz/styles.scss
+++ b/src/pages/ProfilQuiz/styles.scss
@@ -1,6 +1,12 @@
 @use '../../styles/mixin';
 @use '../../styles/vars';
 
+.quiz__management{
+  padding: 3.5rem;
+  @include mixin.breakpoint(desktop) {
+   padding: 1.5rem vars.$headerHeight;
+  }
+}
 
 .quiz__title {
   font-size: 1.5rem;
@@ -37,7 +43,12 @@
   width: 330px;
   height: 530px;
   margin: 1rem auto;
-  background-color: rgba(13, 114, 218, 0.2);
+  background: rgba(255, 255, 255, 0.03);
+  backdrop-filter: blur(2px);
+-webkit-backdrop-filter: blur(2px);
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    // background-color: rgba(13, 114, 218, 0.2);
+  color:#ffebc4;
   border-radius: 8px;
 }
 
@@ -54,3 +65,8 @@
   justify-content: center;
   padding-bottom: 2rem;
 }
+
+
+
+
+
