--- a/src/pages/QuizCreate/QuestionCreate/styles.scss
+++ b/src/pages/QuizCreate/QuestionCreate/styles.scss
@@ -2,7 +2,7 @@
 @use '../../../styles/vars';
 
 .question-create__container{
-    background-color: #fff;
+    background-color: rgba(255, 255, 255,0.6);
     border-radius: 5%;
     margin: 2rem 0;
     padding: 1rem; 
