--- a/src/pages/QuizUpdate/styles.scss
+++ b/src/pages/QuizUpdate/styles.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-image: linear-gradient(to bottom, rgba(255, 255, 255,0.8), rgba(255, 210, 228,0.6), rgba(255, 189, 189,0.6), rgba(255, 172, 134,0.6), rgba(255, 172, 134,0.6), rgba(255, 164, 108,0.6), rgba(255, 157, 78,0.6), rgba(254, 152, 42,0.6), rgba(250, 134, 54,0.6), rgba(243, 117, 63,0.6), rgba(233, 101, 73,0.6), rgba(221, 87, 81,0.8));
+  background-image: linear-gradient(to bottom, rgba(255, 250, 250, 0.8), rgba(255, 210, 228,0.6), rgba(255, 189, 189,0.6), rgba(255, 172, 134,0.6), rgba(255, 172, 134,0.6), rgba(255, 164, 108,0.6), rgba(255, 157, 78,0.6), rgba(254, 152, 42,0.6), rgba(250, 134, 54,0.6), rgba(243, 117, 63,0.6), rgba(233, 101, 73,0.6), rgba(221, 87, 81,0.8));
   padding: 1.5rem;
   @include mixin.breakpoint(desktop) {
    padding: 1.5rem vars.$headerHeight;
@@ -15,7 +15,10 @@
   &__loading{
     height: 100vh;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 1rem;
     font-size: 1.5rem;
   }
   &__header {
@@ -39,32 +42,7 @@
     font-size: 1rem;
     text-align: center;
     color: vars.$primary-dark-color;
-  }
-  &__btn-exit{
-    font-family: 'Poppins', sans-serif;
-    outline: 0;
-    border: 0;
-    padding: 0.5rem;  
-    background: vars.$main-primary-color;
-    border-radius: 0.5rem;
-    color: #fff;
-    font-size: 0.9rem;
-    position: absolute;
-    top: 5.5rem;
-    left: 2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
-    cursor: pointer;
-    &:hover {
-      background-color: hsl(210, 89%, 35%);
-    }
-    @include mixin.breakpoint(desktop) {
-      top: 8rem;
-      left: 4rem;
-     }
-  }
+  } 
   &__form{
     width: 100%;
     display: flex;
@@ -86,14 +64,13 @@
     align-items: center;
     flex-direction: column;
     gap: 1.5rem;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255,0.6);
     border-radius: 5%;
     margin-bottom: 1rem;
     padding: 1rem;
     width: 100%;
   }
   &__btn-submit {
-    font-family: 'Poppins', sans-serif;
     outline: 0;
     border: 0;
     padding: 1rem;
@@ -102,14 +79,36 @@
     background: vars.$main-secondary-color;
     border-radius: 0.5rem;
     color: #fff;
-    font-size: 1rem;
+    font-weight: 400;
+    font-size: 0.9rem;
+    line-height: 1rem;
     cursor: pointer;
+    transition: background-color .17s ease,color .17s ease;
     &:hover {
       background: vars.$secondary-light-color;
     }
   }
 }
 
+
+// display: inline-block;
+// outline: none;
+// cursor: pointer;
+// border-radius: 3px;
+// font-size: 14px;
+// font-weight: 500;
+// line-height: 16px;
+// padding: 2px 16px;
+// height: 38px;
+// min-width: 96px;
+// min-height: 38px;
+// border: none;
+// color: #fff;
+// background-color: rgb(88, 101, 242);
+// transition: background-color .17s ease,color .17s ease;
+// :hover {
+//     background-color: rgb(71, 82, 196);
+// }
 
 
 
