--- a/src/pages/Profil-Settings/styles.scss
+++ b/src/pages/Profil-Settings/styles.scss
@@ -1,97 +1,106 @@
 @use '../../styles/mixin';
 @use '../../styles/vars';
 
-
-
-.profil-settings__update {
-  text-align: center;
-  margin-bottom: 1rem;
-  font-size: 1.5rem;
-  font-weight: 500;
-  padding: 1rem;
-  margin-bottom: 1rem;
-  color: vars.$primary-dark-color;
-  text-align: center;
- 
-}
-
-.form {
-  max-width: 22.5rem;
-  margin: 0 auto 4rem;
-  text-align: center;
-
-  &__label {
-    margin-top: 15px;
+.profil-settings{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 1.5rem;
+  @include mixin.breakpoint(desktop) {
+   padding: 1.5rem vars.$headerHeight;
   }
-
-  &__input {
-    outline: 0;
-    background: #f2f2f2;
+  &__header{
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    border: 0;
-    padding: 15px;
-    font-size: 0.9rem;
-    border-radius: 0.7rem;
+
+    &-title{
+      font-size: 1.5rem;
+        flex-grow: 1;
+        text-align: center;
+        padding: 0.5rem 0 1.5rem 3rem;      
+        @include mixin.breakpoint(desktop) {
+          font-size: 2rem;
+          padding: 1.5rem 0;
+         }
+    }
   }
-}
-
-.profil__update-user {
-  outline: 0;
-  border: 0;
-  padding: 1rem;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  background: vars.$main-primary-color;
-  border-radius: 0.5rem;
-  width: 100%;
-  color: #fff;
-  font-size: 1rem;
-  cursor: pointer;
-  transition: 0.5s;   
-}
-.profil__update-user:hover {
-  background-color: vars.$secondary-light-color;
-  transition: 0.5s;   
-}
-
-.profil__update-user-mdp {
-  outline: 0;
-  border: 0;
-  padding: 1rem;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  background: #fff; 
-  border-radius: 0.5rem;
-  width: 100%;
-  color: vars.$primary-dark-color;
-  font-size: 1rem;
-  font-weight: bold;
-  cursor: pointer;
-  transition: 0.5s;   
-}
-.profil__update-user-mdp:hover {
-  background: vars.$primary-dark-color;
-  color: #fff;  
-  transition: 0.5s;   
-}
-
-.form__password {
-  outline: 0;
-  background: #f2f2f2;
-  width: 100%;
-  border: 0;
-  margin: 0 0 15px;
-  padding: 15px;
-  font-size: 0.9rem;
-  border-radius: 0.7rem;
-}
-
-.label__profil {
-  text-align: left;
-  padding-bottom: 0.2rem;
-  padding-left: 0.5rem;
-  padding-top: 0.75rem;
-  width: 100%;
-  display: block;
-  color: vars.$main-primary-color;
+  &__form{
+    margin-bottom: 0 auto 2rem;
+    width: 100%;
+    @include mixin.breakpoint(tablet) {
+    width: 70%;
+    }
+    @include mixin.breakpoint(desktop) {
+      width: 35%;
+    }
+    @include mixin.breakpoint(desktopXL) {
+      width: 25%;
+    }
+    &-label {
+      display: block;
+      padding-top: 0.8rem;
+      font-size: 1rem;
+    }
+    &-input {
+      border: 0;
+      outline: 0;
+      background: #f2f2f2;
+      border-radius: 0.7rem;
+      width: 100%;
+      padding: 0.7rem;
+      font-size: 0.9rem;
+      font-family: vars.$mainFont;
+    }
+    &__btn-submit {
+      outline: 0;
+      border: 0;
+      padding: 1rem;
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+      background: vars.$main-primary-color;
+      border-radius: 0.5rem;
+      width: 100%;
+      color: #fff;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: 0.5s;
+      &:hover {
+        background-color: vars.$secondary-light-color;
+        transition: 0.5s;   
+      }   
+    }
+  }
+  &__toggle {
+    outline: 0;
+    border: 0;
+    padding: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    background: #fff; 
+    border-radius: 0.5rem;
+    width: 100%;
+    color: vars.$primary-dark-color;
+    font-size: 1rem;
+    font-weight: bold;
+    cursor: pointer;
+    transition: 0.5s;   
+    &:hover {
+      background: vars.$primary-dark-color;
+      color: #fff;  
+      transition: 0.5s;   
+    }
+    @include mixin.breakpoint(tablet) {
+      width: 70%;
+      }
+      @include mixin.breakpoint(desktop) {
+        width: 35%;
+      }
+      @include mixin.breakpoint(desktopXL) {
+        width: 25%;
+      }
+  }
 }
